fixed issue causing anchor element not to resize with child img; fixed text-align on small window view;

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,14 @@ html{
     margin: 0;
 }
 
+/* font */
+h2{
+    font-size: 1.8rem;
+}
+h3{
+    font-size: 1.5rem;
+}
+
 body{
     background: hsl(214, 64%, 98%);
     font-family: 'Poppins', sans-serif;
@@ -24,7 +32,7 @@ body{
 
 main, header, footer{
     width: 100%;
-    padding: 3% 4%;
+    padding: 6% 4%;
 }
 
 h1, h2, h3, h4, h5, h6{
@@ -57,24 +65,11 @@ img{
     filter: grayscale(100%) contrast(0%) brightness(100);
 }
 
-/* alignment */
-.right{
-    display: inline-block;
-    margin-left: auto;
-    margin-right: 0;
-}
-
-.centerText{
-    text-align: center;
-    margin: auto;
-}
 /* rows & columns */
 .row{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-
-    align-items: flex-start;
 
     margin-bottom: 14rem;
 }
@@ -104,7 +99,6 @@ img{
     flex: 1;
     min-width: 100px;
     flex-wrap: wrap;
-    margin-right: 14%;
     min-width: 200px;
 }
 
@@ -143,21 +137,25 @@ i{
     background: linear-gradient(hsl(322, 100%, 66%), hsl(265, 100%, 66%));
     height: 100%;
     width: 125%;
-    transform: rotate(-40deg) translate(60%, 0%);
+    transform: rotate(-40deg) translate(63%,0%);
 }
 
 .whiteRectangle{
     z-index: -2;
     background: #fff;
-    height: 60%;
-    width: 80%;
-    transform: rotate(-10deg) translate(-5%, 60%);
+    height: 70%;
+    width: 100%;
+    transform: rotate(-30deg) translate(-15%, 20%);
 }
 
 footer, footer a, footer h1, footer h2, footer h3, footer h4, footer h5, footer h6{
     background: hsl(192, 100%, 9%);
     color: white;
-    /* margin-bottom: 0rem !important; */
+}
+
+/* ignore margin-bottom on empty elements (for columnBreak) */
+footer *:not(:empty){
+    margin-bottom: 1rem;
 }
 
 .button, input{
@@ -174,6 +172,12 @@ margin-bottom: 1rem;
     font-size: .8rem;
 }
 
+.buttonGlow{
+    box-shadow: 
+        0px 0px 6px hsl(322, 100%, 66%),
+        2px 2px 12px rgba(72, 64, 82, 0.35);
+}
+
 .whiteButton{
     background: white;
     color: hsl(265, 100%, 66%);
@@ -186,36 +190,87 @@ input{
     border: none;
 }
 
+/* alignment & spacing */
+.right{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: 0;
+}
+
+.centerText{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.marginBottomSm, .column1, .column2, .column3{
+    margin-bottom: 2rem;
+}
+
+.marginNone{
+    margin: 0;
+}
+
 /* for small screens */
 @media only screen and (max-width: 600px){
     body{
         font-size: 16px;
     }
 
-    .logo{
-        display: inline-block;
-        width: 65%;
+    /* button */
+    .formButton{
+        width: 100%;
     }
 
-    /*  */
+    /* rows & columns */
     .card{
-        max-width: 100%;
+        min-width: 100%;
         font-size: 10px;
     }
     .row{
-        margin-bottom: 4rem;
+        align-items: flex-start;
+        margin: 4rem 0;
     }
-    .column1{
+    .mobileColumn{
+        flex-direction: column;
+    }
+    .column1, .column2, .column3{
+        width: 100%;
         max-width: 100%;
+    }
+
+    /* decorative */
+    .logo{
+        display: inline-block;
+        width: 40%;
+    }
+
+    .whiteLogo{
+        margin: auto;
+        align-self: center;
+        text-align: center;
+    }
+    .pinkRectangle{
+        transform: rotate(-23deg) translate(78%,0%);
+    }
+    
+    .whiteRectangle{
+        transform: rotate(-30deg) translate(-35%, 50%);
+    }
+
+    /* alignment */
+    .centerTextSmallScreen{
+        text-align: center;
+        align-items: center;
     }
 
     /* footer */
     footer :not(.column3 a){
         text-align: center;
     }
-    .whiteLogo{
-        margin: auto;
-        align-self: center;
-        text-align: center;
+
+    /* social media links at bottom of footer on small screens */
+    footer .row:nth-child(2) .column3:first-child{
+        order: 3;
     }
 }
